<resources>

    <string name="facebook_app_id">1559470051028990</string>

    <string name="app_name">Collector</string>
    <string name="profile">PROFILE</string>
    <string name="feed">DEBTS</string>
    <string name="log_out">LOG OUT</string>
    <string name="settings">SETTINGS</string>
    <string name="borrow_label">BORROW</string>
    <string name="lend_label">LEND</string>
    <string name="sort">Sort:</string>
    <string name="date">Date</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>


    <string name="transition_dialog">transition_dialog</string>
    <string name="money_label">MONEY</string>
    <string name="object_label">Object</string>
    <string name="close">close</string>

    <string name="object_name">Object name</string>
    <string name="name_of_the_person">Name of the person</string>
    <string name="z">Amount</string>
    <string name="submit">Submit</string>

    <string name="add_picture">Add picture </string>
    <string name="description">Description (optional)</string>

    <string name="stage_1_adding">You %1$s %2$s</string>
    <string name="stage_2_adding_borrow">You %1$s %2$s from %3$s </string>
    <string name="stage_2_adding_lend">You %1$s %2$s to %3$s </string>
    <string name="no_name_nav_bar">Set name in Settings</string>
    <string name="name">name</string>


</resources>
