<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_group"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:checked="true"
            android:id="@+id/debt_group"
            android:icon="@drawable/ic_feed"
            android:title="@string/feed" />

        <item
            android:id="@+id/log_out_group"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />

        <item
            android:id="@+id/settings_group"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group android:menuCategory="container">


    </group>

</menu>
