<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DialogActivity">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:background="@drawable/dialog_background"
        android:transitionName="@string/transition_dialog"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TabLayout
                android:id="@+id/borrow_lend_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginBottom="10dp">
                        <android.support.design.widget.TabItem

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/borrow_label"/>
                        <android.support.design.widget.TabItem
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/lend_label"/>
            </android.support.design.widget.TabLayout>


            <android.support.design.widget.TabLayout
                android:id="@+id/money_object_tab"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                        <android.support.design.widget.TabItem
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/money_label"/>
                        <android.support.design.widget.TabItem
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/object_label"/>
            </android.support.design.widget.TabLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                android:text="You borrowed money"
                android:id="@+id/initial_label"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


                <include layout="@layout/add_money"/>


                <include layout="@layout/add_object"/>


        </ViewFlipper>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:enabled="false"
                android:id="@+id/prev"
                android:background="@drawable/btn_background"
                android:layout_weight="1" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:background="@drawable/btn_background"
                android:layout_marginTop="20dp"
                android:text="@string/next"
                android:textColor="#fff"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

        <Button
        android:layout_marginRight="5dp"
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/btn_background"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        android:layout_weight="1"
        android:textColor="#fff"
        android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>


</FrameLayout>
