<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical"
    android:id="@+id/guillotine_view"
    >

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        >

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_profile" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/debt_group"
        style="@style/LinearLayout.GuillotineItem"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/feed" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />


    <LinearLayout
        android:id="@+id/log_out_group"
        style="@style/LinearLayout.GuillotineItem"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_log_out" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/log_out" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>